--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Dependencies
 node_modules
-
+package-lock.json
 # yarn error logs
 yarn-error.log
-
+yarn.lock
 # Environment varibales
 .env*
 !.env*.example
