--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "prettier"
   ],
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.1.0",
     "cloudinary": "^2.5.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -68,6 +70,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
+    "puppeteer": "^24.10.1",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^11.0.5",
