--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.1.0",
+    "chrome-aws-lambda": "^10.1.0",
     "cloudinary": "^2.5.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -61,16 +62,19 @@
     "express-rate-limit": "^5.0.0",
     "helmet": "^4.1.0",
     "http-status": "^1.4.0",
+    "instagram-scraping": "^1.0.17",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
     "puppeteer": "^24.10.1",
+    "puppeteer-core": "^10.4.0",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^11.0.5",
