--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -1,7 +1,7 @@
 {
   "apps": [
     {
-      "name": "app",
+      "name": "backend-app",
       "script": "src/index.js",
       "instances": 1,
       "autorestart": true,
